--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "mesh-examples",
   "type": "module",
   "dependencies": {
-    "@meshsdk/core": "^1.5.17",
+    "@meshsdk/core": "^1.5.23",
+    "dotenv": "^16.4.5",
     "tsx": "^4.9.4"
   },
-  "scripts": {}
+  "scripts": {
+    "yaci:start": "./yaci/bin/devkit.sh start",
+    "yaci:stop": "./yaci/bin/devkit.sh stop"
+  }
 }
