--- a/aiken-vesting/aiken-workspace/aiken.toml
+++ b/aiken-vesting/aiken-workspace/aiken.toml
@@ -1,5 +1,7 @@
 name = "meshjs/vesting"
 version = "0.0.0"
+compiler = "v1.1.0"
+plutus = "v3"
 license = "Apache-2.0"
 description = "Aiken contracts for project 'meshjs/vesting'"
 
@@ -10,10 +12,12 @@ platform = "github"
 
 [[dependencies]]
 name = "aiken-lang/stdlib"
-version = "1.9.0"
+version = "v2"
 source = "github"
 
 [[dependencies]]
 name = "sidan-lab/vodka"
-version = "0.0.1-beta"
+version = "0.1.0-beta"
 source = "github"
+
+[config]
