--- a/aiken-hello-world/package.json
+++ b/aiken-hello-world/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aiken-vesting",
+  "name": "aiken-hello-world",
   "type": "module",
   "dependencies": {
-    "@meshsdk/core": "^1.7.1",
+    "@meshsdk/core": "^1.7.3",
     "dotenv": "^16.4.5",
     "tsx": "^4.9.4"
   },
