--- a/aiken-vesting/.env.example
+++ b/aiken-vesting/.env.example
@@ -1,1 +1,2 @@
 BLOCKFROST_API_KEY=preprodxxxxxxxx
+MNEMONIC="solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution,solution"
