update mesh package 1.9.0

--- a/next-page-route/package.json
+++ b/next-page-route/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "mesh-next-page-route",
+  "name": "starter-next-ts-template",
+  "description": "A Mesh starter template for NextJS",
+  "author": "MeshJS",
+  "license": "Apache-2.0",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean": "rm -rf .next package-lock.json node_modules"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@meshsdk/core": "^1.8.0",
-    "@meshsdk/react": "^1.8.0",
-    "next": "^15.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "@meshsdk/core": "^1.9.0-beta.0",
+    "@meshsdk/react": "^1.9.0-beta.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "15.0.3"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "typescript": "^5",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9",
-    "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3"
   }
 }
