--- a/aiken-vesting/package.json
+++ b/aiken-vesting/package.json
@@ -2,7 +2,7 @@
   "name": "aiken-vesting",
   "type": "module",
   "dependencies": {
-    "@meshsdk/core": "^1.8.0",
+    "@meshsdk/core": "^1.9.0-beta.0",
     "dotenv": "^16.4.5",
     "tsx": "^4.9.4"
   },
