--- a/express/package.json
+++ b/express/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@meshsdk/core": "^1.8.0",
+    "@meshsdk/core": "^1.9.0-beta.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
