--- a/next-app-route/package.json
+++ b/next-app-route/package.json
@@ -6,24 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean": "rm -rf .next package-lock.json node_modules"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@meshsdk/core": "^1.8.0",
-    "@meshsdk/react": "^1.8.0",
-    "next": "^15.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "@meshsdk/core": "^1.9.0-beta.0",
+    "@meshsdk/react": "^1.9.0-beta.0",
+    "next": "15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
