--- a/svelte-starter/package.json
+++ b/svelte-starter/package.json
@@ -31,7 +31,7 @@
     "vite-plugin-wasm": "^3.3.0"
   },
   "dependencies": {
-    "@meshsdk/core": "^1.8.0",
-    "@meshsdk/svelte": "^1.8.0"
+    "@meshsdk/core": "^1.9.0-beta.0",
+    "@meshsdk/svelte": "^1.9.0-beta.0"
   }
 }
